# aplyer

./: .gitignore  .python-version  README.md  docker-compose.yaml  pyproject.toml
src/aplyer/: __init__.py  app.py  cli.py  exceptions.py  worker.py
src/aplyer/backend/: __init__.py  base.py  redis.py
src/aplyer/tasks/: __init__.py  message.py
test_app/: run.py
test_app/app/: main.py
tests/: test_messages.py
